# CountLines

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/: README.md
.github/workflows/: ci.yml  release.yml
src/: countlines.c  countlines.h  main.c  webserver.c  webserver.h
web/: index.html
